--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
 		"nesbot/carbon": "~1.4",
 		"patchwork/utf8": "~1.1.18",
 		"herrera-io/box": "~1.5.3",
-		"phpseclib/phpseclib": "~0.3.5"
+		"phpseclib/phpseclib": "0.3.5"
 	},
 	"suggest": {
 		"anahkiasen/rocketeer-campfire": "Campfire plugin to create deployments notifications",
